--- a/options.html
+++ b/options.html
@@ -1,21 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+
   <style>
-    button {
-      height: 30px;
-      width: 30px;
-      outline: none;
-      margin: 10px;
+    .demo-list-control {
+      width: 200px;
+    }
+
+    body {
+      font-family: 'Roboto', 'Helvetica', sans-serif;
     }
   </style>
 </head>
 <body>
-<div id="buttonDiv">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <header class="mdl-layout__header">
+    <div class="mdl-layout__header-row">
+      <nav>
+        <span class="mdl-layout-title">Monachrome Configuration</span>
+      </nav>
+    </div>
+  </header>
+  <main class="mdl-layout__content">
+    <div class="page-content">
+      <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--4-col">
+          <ul class="demo-list-control mdl-list">
+            <li class="mdl-list__item">
+              <span class="mdl-list__item-primary-content">
+                <strong>Minimap</strong>
+              </span>
+              <span class="mdl-list__item-secondary-action">
+                <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="js-option-minimap">
+                  <input type="checkbox" id="js-option-minimap" class="mdl-switch__input" checked/>
+                </label>
+              </span>
+            </li>
+            <li class="mdl-list__item">
+              <span class="mdl-list__item-primary-content">
+                <strong>LineNumbers</strong>
+              </span>
+              <span class="mdl-list__item-secondary-action">
+                <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="js-option-line-numbers">
+                  <input type="checkbox" id="js-option-line-numbers" class="mdl-switch__input" checked/>
+                </label>
+              </span>
+            </li>
+          </ul>
+        </div>
+        <div class="mdl-cell mdl-cell--8-col">8</div>
+      </div>
+    </div>
+  </main>
 </div>
-<div>
-  <p>Choose a different background color!</p>
+<div aria-live="assertive" aria-atomic="true" aria-relevant="text" class="mdl-snackbar mdl-js-snackbar">
+  <div class="mdl-snackbar__text"></div>
+  <button type="button" class="mdl-snackbar__action"></button>
 </div>
 </body>
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script src="options.js"></script>
 </html>
