--- a/options.html
+++ b/options.html
@@ -7,12 +7,24 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 
   <style>
-    .demo-list-control {
-      width: 200px;
-    }
-
     body {
       font-family: 'Roboto', 'Helvetica', sans-serif;
+    }
+
+    select {
+      font: 400 14px/1.4em "Segoe UI", "Open Sans", Calibri, Candara, Arial, sans-serif;
+      color: #080808;
+      width: 150px;
+      background-color: #fff;
+      border: 1px solid #bbb;
+      height: 30px;
+      line-height: 30px;
+      padding: 4px 6px;
+      font-size: 14px;
+      vertical-align: middle;
+      -webkit-border-radius: 0;
+      -moz-border-radius: 0;
+      border-radius: 0;
     }
   </style>
 </head>
@@ -50,9 +62,71 @@
                 </label>
               </span>
             </li>
+            <li class="mdl-list__item">
+              <span class="mdl-list__item-primary-content">
+                <label for="js-option-language">
+                <strong>Default language</strong>
+                </label>
+              </span>
+              <span class="mdl-list__item-secondary-action">
+                <select class="language-picker" id="js-option-language">
+                  <option>apex</option>
+                  <option>azcli</option>
+                  <option>bat</option>
+                  <option>c</option>
+                  <option>clojure</option>
+                  <option>coffeescript</option>
+                  <option>cpp</option>
+                  <option>csharp</option>
+                  <option>csp</option>
+                  <option>css</option>
+                  <option>dockerfile</option>
+                  <option>fsharp</option>
+                  <option>go</option>
+                  <option>handlebars</option>
+                  <option>html</option>
+                  <option>ini</option>
+                  <option>java</option>
+                  <option>javascript</option>
+                  <option>json</option>
+                  <option>less</option>
+                  <option>lua</option>
+                  <option>markdown</option>
+                  <option>msdax</option>
+                  <option>mysql</option>
+                  <option>objective-c</option>
+                  <option>perl</option>
+                  <option>pgsql</option>
+                  <option>php</option>
+                  <option selected>plaintext</option>
+                  <option>postiats</option>
+                  <option>powerquery</option>
+                  <option>powershell</option>
+                  <option>pug</option>
+                  <option>python</option>
+                  <option>r</option>
+                  <option>razor</option>
+                  <option>redis</option>
+                  <option>redshift</option>
+                  <option>ruby</option>
+                  <option>rust</option>
+                  <option>sb</option>
+                  <option>scheme</option>
+                  <option>scss</option>
+                  <option>shell</option>
+                  <option>sol</option>
+                  <option>sql</option>
+                  <option>st</option>
+                  <option>swift</option>
+                  <option>typescript</option>
+                  <option>vb</option>
+                  <option>xml</option>
+                  <option>yaml</option></select>
+              </span>
+            </li>
           </ul>
         </div>
-        <div class="mdl-cell mdl-cell--8-col">8</div>
+        <!--<div class="mdl-cell mdl-cell&#45;&#45;8-col">8</div>-->
       </div>
     </div>
   </main>
