Before migrating to Material Components for the Web

--- a/options.html
+++ b/options.html
@@ -47,8 +47,8 @@
                 <strong>Minimap</strong>
               </span>
               <span class="mdl-list__item-secondary-action">
-                <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="js-option-minimap">
-                  <input type="checkbox" id="js-option-minimap" class="mdl-switch__input" checked/>
+                <label id="js-option-minimap-label" class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="js-option-minimap">
+                  <input type="checkbox" id="js-option-minimap" class="mdl-switch__input"/>
                 </label>
               </span>
             </li>
@@ -58,7 +58,7 @@
               </span>
               <span class="mdl-list__item-secondary-action">
                 <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="js-option-line-numbers">
-                  <input type="checkbox" id="js-option-line-numbers" class="mdl-switch__input" checked/>
+                  <input type="checkbox" id="js-option-line-numbers" class="mdl-switch__input"/>
                 </label>
               </span>
             </li>
