--- a/options.html
+++ b/options.html
@@ -1,141 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+  <title>Monachrome Options</title>
 
-  <style>
-    body {
-      font-family: 'Roboto', 'Helvetica', sans-serif;
-    }
-
-    select {
-      font: 400 14px/1.4em "Segoe UI", "Open Sans", Calibri, Candara, Arial, sans-serif;
-      color: #080808;
-      width: 150px;
-      background-color: #fff;
-      border: 1px solid #bbb;
-      height: 30px;
-      line-height: 30px;
-      padding: 4px 6px;
-      font-size: 14px;
-      vertical-align: middle;
-      -webkit-border-radius: 0;
-      -moz-border-radius: 0;
-      border-radius: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="https://unpkg.com/picnic">
 </head>
 <body>
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-  <header class="mdl-layout__header">
-    <div class="mdl-layout__header-row">
-      <nav>
-        <span class="mdl-layout-title">Monachrome Configuration</span>
-      </nav>
-    </div>
-  </header>
-  <main class="mdl-layout__content">
-    <div class="page-content">
-      <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--4-col">
-          <ul class="demo-list-control mdl-list">
-            <li class="mdl-list__item">
-              <span class="mdl-list__item-primary-content">
-                <strong>Minimap</strong>
-              </span>
-              <span class="mdl-list__item-secondary-action">
-                <label id="js-option-minimap-label" class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="js-option-minimap">
-                  <input type="checkbox" id="js-option-minimap" class="mdl-switch__input"/>
-                </label>
-              </span>
-            </li>
-            <li class="mdl-list__item">
-              <span class="mdl-list__item-primary-content">
-                <strong>LineNumbers</strong>
-              </span>
-              <span class="mdl-list__item-secondary-action">
-                <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="js-option-line-numbers">
-                  <input type="checkbox" id="js-option-line-numbers" class="mdl-switch__input"/>
-                </label>
-              </span>
-            </li>
-            <li class="mdl-list__item">
-              <span class="mdl-list__item-primary-content">
-                <label for="js-option-language">
-                <strong>Default language</strong>
-                </label>
-              </span>
-              <span class="mdl-list__item-secondary-action">
-                <select class="language-picker" id="js-option-language">
-                  <option>apex</option>
-                  <option>azcli</option>
-                  <option>bat</option>
-                  <option>c</option>
-                  <option>clojure</option>
-                  <option>coffeescript</option>
-                  <option>cpp</option>
-                  <option>csharp</option>
-                  <option>csp</option>
-                  <option>css</option>
-                  <option>dockerfile</option>
-                  <option>fsharp</option>
-                  <option>go</option>
-                  <option>handlebars</option>
-                  <option>html</option>
-                  <option>ini</option>
-                  <option>java</option>
-                  <option>javascript</option>
-                  <option>json</option>
-                  <option>less</option>
-                  <option>lua</option>
-                  <option>markdown</option>
-                  <option>msdax</option>
-                  <option>mysql</option>
-                  <option>objective-c</option>
-                  <option>perl</option>
-                  <option>pgsql</option>
-                  <option>php</option>
-                  <option selected>plaintext</option>
-                  <option>postiats</option>
-                  <option>powerquery</option>
-                  <option>powershell</option>
-                  <option>pug</option>
-                  <option>python</option>
-                  <option>r</option>
-                  <option>razor</option>
-                  <option>redis</option>
-                  <option>redshift</option>
-                  <option>ruby</option>
-                  <option>rust</option>
-                  <option>sb</option>
-                  <option>scheme</option>
-                  <option>scss</option>
-                  <option>shell</option>
-                  <option>sol</option>
-                  <option>sql</option>
-                  <option>st</option>
-                  <option>swift</option>
-                  <option>typescript</option>
-                  <option>vb</option>
-                  <option>xml</option>
-                  <option>yaml</option></select>
-              </span>
-            </li>
-          </ul>
-        </div>
-        <!--<div class="mdl-cell mdl-cell&#45;&#45;8-col">8</div>-->
+<nav class="demo">
+  <a href="#" class="brand">
+    <span>Monachrome Options</span>
+  </a>
+  <div class="menu">
+    <a href="#" class="button icon-puzzle js-save">Save</a>
+  </div>
+</nav>
+
+<main style="padding: 70px 30px 0;">
+  <form>
+    <div class="flex">
+      <div style="padding-right: 30px">
+        <h1 style="padding: 0;">Options</h1>
+
+        <h3>Default Language</h3>
+        <select id="js-default-language"></select>
+
+        <h3>Minimap</h3>
+        <label>
+          <input type='radio' name="minimap" value="true">
+          <span class="checkable">On</span>
+        </label>
+        <label>
+          <input type='radio' name="minimap" value="false">
+          <span class="checkable">Off</span>
+        </label>
+
+        <h3>Line Number</h3>
+        <label>
+          <input type='radio' name="linenumber" value="on">
+          <span class="checkable">On</span>
+        </label>
+        <label>
+          <input type='radio' name="linenumber" value="off">
+          <span class="checkable">Off</span>
+        </label>
+      </div>
+      <div class="third">
+        <h1 style="padding: 0;">Preview</h1>
+        <div id="js-preview-container" style="width:100%;height:100%;border:1px solid grey"></div>
       </div>
     </div>
-  </main>
-</div>
-<div aria-live="assertive" aria-atomic="true" aria-relevant="text" class="mdl-snackbar mdl-js-snackbar">
-  <div class="mdl-snackbar__text"></div>
-  <button type="button" class="mdl-snackbar__action"></button>
-</div>
-</body>
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  </form>
+</main>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js" integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ=" crossorigin="anonymous"></script>
+<script src="node_modules/monaco-editor/min/vs/loader.js"></script>
 <script src="options.js"></script>
+</body>
 </html>
